# shaddock

./: .gitignore  .mailmap  .travis.yml  AUTHORS  CONTRIBUTING.rst  ChangeLog  Dockerfile  HACKING.rst  MANIFEST.in  PKGBUILD.j2  README.md  README.rst  configuration.yaml  configuration.yml  create_db.py  fabfile.py  list.py  model_old.py  mvc.py  octopenstack.py  openstack-common.conf  pip-selfcheck.json  py-devstack.py  requirements.txt  run_tests.sh  services.yaml  setup.cfg  setup.py  setup_defaults.sh  test-requirements.txt  tox.ini
base/: Dockerfile  authorized_keys
conf/: .configuration.yml.swp  .services.yml.swp  configuration.yml  panama.conf  services.yml
doc/.doctrees/: contributing.doctree  index.doctree  infos.doctree  installation.doctree  model.doctree  usage.doctree
doc/html/: .buildinfo  genindex.html  index.html  infos.html  installation.html  model.html  objects.inv  search.html  searchindex.js  usage.html
doc/source/: alternatives.rst  conf.py  index.rst  installation.rst  model.rst  usage.rst
dockerfiles/base/: Dockerfile  authorized_keys
dockerfiles/glance/: .Dockerfile.swp  Dockerfile  register_service.sh  run.sh  supervisord.conf
dockerfiles/horizon/: .Dockerfile.swp  Dockerfile  register_service.sh  run.sh  supervisord.conf
dockerfiles/keystone/: .Dockerfile.swp  Dockerfile  run.sh  supervisord.conf
dockerfiles/nova/: .Dockerfile.swp  Dockerfile  register_service.sh  supervisord.conf
dockerfiles/novacompute/: Dockerfile  supervisord.conf
dockerfiles/rabbitmq/: Dockerfile  run.sh  set_rabbitmq_password.sh  supervisord.conf
docs/: alternatives.html  contributing.html  index.html  model.html  readme.html  schema.graphml  searchindex.js
docs/.doctrees/: alternatives.doctree  environment.pickle  readme.doctree
docs/_sources/: alternatives.txt  (+3 more)
documentation/: OctOpenStackConfig  admin-openrc.sh  conf_templ  create_default_user.sh  init.sh  model_old.py  oldconfigure.sh  setup_defaults.sh
etc/: panama.conf  shaddock.conf
examples/: README.md  README.rst  infrastructure.yml  openstack-simple.yml  openstack.yml  set_ip.sh
glance/: Dockerfile  create_user.sh
horizon/: Dockerfile  create_db.sh  run.sh  supervisord.conf
keystone/: Dockerfile  create_db.sh  create_user.sh  keystone_setup.sh  register_service.sh  supervisord.conf
mysql/: Dockerfile  README.md  create_mysql_admin_user.sh
nova/: Dockerfile  create_db.sh  create_user.sh  run.sh
nova-compute/: Dockerfile  run.sh
novacompute/: Dockerfile
octopenstack/: .controller.py.swp  .dockercontroller.py.swp  .initconfig.py.swp  .model.py.swp  __init__.py  backend.py  controller.py  docker_controller.py  dockercontroller.py  frontend.old  frontend.py  initconfig.py  model.py  view.py
old_/: fabfile.py
old_sh_scripts/: run.sh
panama/: __init__.py  backend.py  frontend.py  initconfig.py  list.py  main.py  model.py  opts.py  scheduler.py  view.py
rabbitmq/: Dockerfile  supervisord.conf
shaddock/: backend.py  checks.py  configprocessor.py  dev.py  exceptions.py  frontend.py  githelper.py  handler.py  main.py  model.py  opts.py  parsing.py  scheduler.py  shell.py
test/: glance_test.sh  keystone_test.sh
tox/: test.py
(+89 files in other folders)
