[metadata]
name = shaddock
version = 0.6.0
summary = A container based orchestration and deployment tool
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = https://github.com/epheo/shaddock
classifiers =
    Environment :: OpenStack
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Operating System :: POSIX :: Linux
author = Thibaut Lapierre
author-email = github@epheo.eu

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    shaddock

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs

[entry_points]
console_scripts =
    shaddock = shaddock.shell:main
    shdk = shaddock.shell:main


[bdist_wheel]
universal=1
