[metadata]
name = shaddock
summary = A container based orchestration and deployment tool
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = http://shaddock.epheo.eu
classifiers =
    Environment :: OpenStack
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Operating System :: POSIX :: Linux
author = Thibaut Lapierre
author-email = shaddock@epheo.eu

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    shaddock

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs

[entry_points]
console_scripts =
    shaddock = shaddock.cli.shell:main
    shdk = shaddock.cli.shell:main


[bdist_wheel]
universal=1
